Added a figure idea placeholder

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -139,7 +139,7 @@ Before they sold out brooklyn yuccie, gluten-free sriracha lumbersexual four lok
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{figure}[tbp]
-\includegraphics[width=0.9\textwidth]{toc-graphic.png}
+\includegraphics[width=0.9\textwidth]{Spectra_Sample.pdf}
 %\resizebox{0.9\textwidth}{!}{\includegraphics{toc-graphic.png}}
 \caption{\label{figure:example} {\bf Example figure.} 
 This is an example figure.
