--- a/SI/plate_type/SI_plate_type.ipynb
+++ b/SI/plate_type/SI_plate_type.ipynb
@@ -194,6 +194,7 @@
     "\n",
     "\n",
     "fig.savefig('20190423_single_well_plate_comparison_rfu.pdf', bbox_inches='tight', dpi=300)"
+    "fig.savefig('20190423_single_well_plate_comparison_rfu.svg', bbox_inches='tight', dpi=300)"
    ]
   },
   {
